# scryfall-rs

./: Cargo.toml
src/: card.rs  game.rs  main.rs  set.rs
