[package]
name = "scryfall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "blocking"]}
serde = { version = "1.0.142", features = ["derive"]}
chrono = { version = "0.4.20", features = ["serde"] }
